--- a/index.css
+++ b/index.css
@@ -1,10 +1,32 @@
 *{
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Courier New', sans-serif;
 }
 
-body{
+#projectbody{
     background-image: url(bg1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat;
+    background-size: 100%;
+}
+
+#landingbody{
+    background-image: url(bg3.jpg);
+    background-repeat: repeat;
+    background-size: 100%;
+}
+
+#contactbody{
+    background-image: url(bg4.jpg);
+    background-repeat: repeat;
+    background-size: 100%;  
+}
+
+
+#toolsbody{
+    background-image: url(bg5.jpg);
+    background-repeat: repeat;
+    background-size: 100%;
+}
+
+#landingmain{
+    font-family: 'Sofia Sans', sans-serif;
 }
